# dynamic-wallpaper

./: Cargo.toml  README.md  license_header.txt
src/: cli.rs  err.rs  image_locator.rs  main.rs
