[package]
name = "photo-motus"
version = "0.1.0"
authors = ["Andrew Plaza <aplaza@liquidthink.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.22.3"
interpolation = "0.2.0"
failure = "0.1.6"
quicli = "0.4.0"
structopt = "0.3.3"
